<resources>
    <string name="app_name">Quaddro100h</string>
    <string name="loading_text1">.Carregando.</string>
    <string name="loading_text2">..Carregando..</string>
    <string name="loading_text3">...Carregando...</string>
    <string name="logo_alt">Logo do Overwatch</string>
    <string name="megasena_text">Mega-Sena</string>
    <string name="sorteios_text">Sorteios:</string>
    <string name="sortear_btn">Sortear</string>
    <string name="sorteios_num">1</string>
    <string name="btn_megasena">Mega-Sena</string>
    <string name="btn_tictactoe">Jogo da Velha</string>
    <string name="btn_endereco">Endereço</string>
    <string name="txt_mega">M\nE\nG\nA</string>
    <string name="txt_sena">S\nE\nN\nA</string>
    <string name="txt_dificuldade">Selecione uma dificuldade</string>
    <string name="btn_animacao">Animação</string>
    <string name="animacao_quadro_a_quadro">Animação (Quadro a Quadro)</string>
    <string name="btn_animacao_quaddro">Animação Quadro</string>
    <string name="lab04_endereco_cancelado">Cadastro cancelado!</string>
    <string name="lab04_endereco_salvo">Endereço salvo!</string>
    <string name="lab04_endereco_buscando">Buscando…</string>
    <string name="lab07_sw_buscando">Buscando…</string>
    <string name="lab04_retrofit_baseUrl_cep" translatable="false">http://api.postmon.com.br/v1/</string>
    <string name="lab07_retrofit_baseUrl_sw" translatable="false">http://swapi.co/api/</string>
    <string name="btn_starwars">StarWars</string>
    <string name="btn_fragment">Hotel Fragment</string>
    <string name="btn_notificacao">Notificações</string>
</resources>
