<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="Laboratórios"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_megasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_megasena"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_tictactoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_tictactoe"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_endereco"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_animacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_animacao"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_animacao_quaddro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_animacao_quaddro"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_starwars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_starwars"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_fragment"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>